Calculate spread for coins and bullions
